--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,4 +1,3 @@
 pulumi>=3.0.0,<4.0.0
 pulumi_aws>=5.0.0,<6.0.0
-pulumi_awsx>=1.0.0-beta.11,<2.0.0
-pulumi_command>=0.4.0,<1.0.0
+pulumi_awsx>=1.0.0,<2.0.0
